add mesures api
