# python/api/swagger.yml
@@ -65,6 +65,33 @@ paths:
       responses:
         200:
           description: "Successful add cases operation"
+  /mesures:
+    get:
+      operationId: "mesures.read_all"
+      tags:
+        - Mesures
+      description: "Read all mesures"
+      responses:
+        200:
+          description: "Successful read mesures list operation"
+          schema:
+            type: "array"
+            items:
+              $ref: '#/definitions/mesures'
+    put:
+      operationId: "mesures.add"
+      tags:
+        - Mesures
+      description: "Add a mesures entry"
+      parameters:
+        - in: body
+          name: mesures
+          description: "mesures to add"
+          schema:
+            $ref: '#/definitions/mesures'
+      responses:
+        200:
+          description: "Successful add mesures operation"
   
 definitions:
     source:
@@ -105,4 +132,34 @@ definitions:
           type: "integer"
         upper:
           type: "integer"
+    mesures:
+      properties:
+        _id:
+          type: "string"
+        date:
+          type: "string"
+        adm:
+          type: "array"
+          items:
+            type: "string"
+        border_control:
+          type: "boolean"
+        home_office:
+          type: "boolean"
+        closure_leisureandbars:
+          type: "boolean"
+        lockdown:
+          type: "boolean"
+        schools_closed:
+          type: "boolean"
+        traveller_quarantine:
+          type: "boolean"
+        primary_residence:
+          type: "boolean"
+        test_limitations:
+          type: "boolean"
+        misc:
+          type: "string"
+        source:
+          type: "string"
 
